# flow

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  BUILD_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  PHASE2_COMPLETE_SUMMARY.md  PHASE2_IMPLEMENTATION.md  PHASE2_TEST_COVERAGE.md  PHASE3_SUMMARY.md  PHASE5_100_PERCENT_COMPLETE.md  PHASE5_COMPLETE.md  PROJECT_COMPLETE.md  QUICK_START.md  RAILWAY_DEPLOYMENT.md  README.md  TESTING.md  TEST_EXECUTION_GUIDE.md  TEST_EXECUTION_PLAN.md  TEST_SUMMARY.md  WINDOWS_SETUP_GUIDE.md  fix_rust_build.ps1  fix_utoipa_swagger.ps1  railway.toml
.cargo/: config.toml
.claude/: settings.local.json
.claude/skill/: README.md  railway-deployment.skill
.github/workflows/: ci.yml
apps/api/: .env.example  .env.test  Cargo.toml  Dockerfile
apps/api/migrations/: 20250101000001_create_users_table.sql
apps/api/src/: lib.rs  main.rs
apps/api/src/config/: mod.rs  tests.rs
apps/api/src/database/: health.rs  mod.rs
apps/api/src/metrics/: mod.rs
apps/api/src/middleware/: rate_limit.rs
apps/api/src/modules/: mod.rs
apps/api/src/modules/ai/: mod.rs  model.rs  routes.rs  service.rs  streaming.rs
apps/api/src/modules/ai/providers/: anthropic.rs  local.rs  mod.rs  openai.rs
apps/api/src/modules/api_config/: mod.rs
apps/api/src/modules/auth/: hash.rs  jwt.rs  middleware.rs  mod.rs  model.rs  role_guard.rs  routes.rs  service.rs
apps/api/src/modules/graphql/: mod.rs  schema.rs
apps/api/src/modules/health/: mod.rs
apps/api/src/modules/jobs/: mod.rs  scheduler.rs  tasks.rs
apps/api/src/modules/storage/: mod.rs  model.rs  routes.rs  service.rs
apps/api/src/modules/users/: model.rs  routes.rs  service.rs
apps/api/src/modules/version/: mod.rs
apps/api/src/modules/websocket/: connections.rs  handler.rs  mod.rs  model.rs  routes.rs
apps/api/src/utils/: error.rs  response.rs  validation.rs
apps/api/tests/: ai_integration.rs  auth_integration_test.rs  config_env.rs  database_integration.rs  graphql_integration.rs  health_check.rs  health_test.rs  jobs_integration.rs  jobs_scheduler.rs  metrics.rs  middleware.rs  storage_integration.rs  websocket_integration.rs
apps/api/tests/common/: ai_mock.rs  app.rs  database.rs  fixtures.rs  mocks.rs  mod.rs  s3_mock.rs  test_app.rs  ws_mock.rs
crates/utoipa-swagger-ui/: .cargo_vcs_info.json  Cargo.toml  build.rs  utoipa-swagger-ui-8.1.0.crate
crates/utoipa-swagger-ui/src/: axum.rs  lib.rs
scripts/: migrate.sh  setup.ps1  setup.sh  test-phase5.sh  test.sh
tests/: auth_complete_test.rs  jwt_role_test.rs  phase2_auth_test.rs  rbac_e2e_test.rs
tests/common/: app.rs  database.rs  fixtures.rs  mocks.rs  mod.rs
