[package]
name = "vibe-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# --- Core async web stack ---
axum = { version = "0.8", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1.0"

# --- Observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# --- OpenAPI + Swagger ---
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum", "vendored"] }

# --- Database ---
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }

# --- Security ---
argon2 = "0.5"

# --- Utilities ---
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
validator = { version = "0.18", features = ["derive"] }
config = "0.14"
thiserror = "2.0"
regex = "1"
jsonwebtoken = "9"

# --- Metrics ---
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# --- Middleware ---
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
governor = "0.6"

# --- GraphQL ---
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
once_cell = "1.20"
futures = "0.3"
bytes = "1"
