[package]
name = "utoipa-swagger-ui"
version = "8.1.0"
edition = "2021"
authors = ["Juhani Hietikko <juhaku@outlook.com>"]
description = "Swagger UI integration for utoipa"
license = "MIT OR Apache-2.0"
repository = "https://github.com/juhaku/utoipa"
documentation = "https://docs.rs/utoipa-swagger-ui"
readme = "README.md"
keywords = ["swagger", "utoipa", "openapi", "ui", "documentation"]
categories = ["web-programming", "api-bindings"]

[lib]
name = "utoipa_swagger_ui"
path = "src/lib.rs"

[dependencies]
# Core deps
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8.5.0"
mime_guess = "2.0"
base64 = "0.22"
similar = { version = "2.4", optional = true }

# Optional framework integrations
actix-web = { version = "4", optional = true }
rocket = { version = "0.5", optional = true }
axum = { version = "0.8", optional = true }
utoipa = { version = "4.2", optional = true }

# Optional utilities
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = { version = "2.5", optional = true }

[features]
default = ["url"]

# Framework integrations
actix-web = ["dep:actix-web", "dep:utoipa"]
rocket = ["dep:rocket", "dep:utoipa"]
axum = ["dep:axum", "dep:utoipa"]

# Other toggles
debug-embed = ["rust-embed/debug-embed"]
reqwest = ["dep:reqwest"]
vendored = []
url = ["dep:url"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "4.2", features = ["macros"] }
similar = "2.4"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(doc_cfg)'] }
